# junitparser

./: .codacy.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.rst  junitparser.py  pyproject.toml  setup.py  test.py
.github/workflows/: build.yml  ci-cd.yml  ci.yml  test-os.yml  test-results.yml  test-whl.yml
docs/: Makefile  api.rst  conf.py  index.rst  inheritance_diagram.rst  requirements.txt
docs/api/: inheritance_diagram.rst
junitparser/: __init__.py  base.py  cli.py  elements.py  junitparser.py  xunit2.py
junitparser/flavors/: __init__.py  pytest.py  pytest_xml.py  xunit2.py
src/junitparser/: __init__.py  junitparser.py
tests/: test_cli.py  test_fromfile.py  test_general.py  test_junitxml.py  test_properties.py  test_pytest.py  test_pytest_xml.py  test_testcase.py  test_testsuite.py  test_write.py  test_xunit2.py
tests/data/: .gitignore  jenkins.xml  no_fails.xml  no_suites_tag.xml  normal.xml  pytest_error.xml  pytest_success.xml  testcase_properties.xml
xsds/: README.md  junit-team-junit5.xsd  pytest-junit-10.xsd
