[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[project]
name = "junitparser"
version = "5.0.0"
authors = [
  { name="Weiwei Wang", email="gastlygem@gmail.com" },
]
description = "Manipulates JUnit/xUnit Result XML files"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Text Processing",
  "Programming Language :: Python :: 3",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["junit", "xunit", "xml", "parser"]

[project.urls]
Homepage = "https://github.com/weiwei/junitparser"
Issues = "https://github.com/weiwei/junitparser/issues"
Documentation = "https://junitparser.readthedocs.io/"

[project.scripts]
junitparser = "junitparser.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

